--- a/.hintrc
+++ b/.hintrc
@@ -39,6 +39,7 @@
         "html-has-lang": "off"
       }
     ],
-    "meta-charset-utf-8": "off"
+    "meta-charset-utf-8": "off",
+    "button-type": "off"
   }
 }
