--- a/.hintrc
+++ b/.hintrc
@@ -40,6 +40,7 @@
       }
     ],
     "meta-charset-utf-8": "off",
-    "button-type": "off"
+    "button-type": "off",
+    "disown-opener": "off"
   }
 }
