--- a/.hintrc
+++ b/.hintrc
@@ -32,6 +32,7 @@
     ],
     "meta-charset-utf-8": "off",
     "no-inline-styles": "off",
-    "button-type": "off"
+    "button-type": "off",
+    "disown-opener": "off"
   }
 }
